zz-backup/10-hello-world-rest-api-canary/helloworld-v2-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-rest-buggy
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: helloworld-restapi
        version: v2
    spec:
      containers:
        - image: gcr.io/ravi-kubernetes-tutorial/helloworld_istio:v2
          imagePullPolicy: Always
          name: helloworld-restapi
          ports:
            - containerPort: 8080
