zz-backup/10-hello-world-rest-api-canary/hellow-subsets-shadowing-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-restapi
spec:
  hosts:
    - helloworld-restapi           # 1
  http:
  - route:
    - destination:
        host: helloworld-restapi   # 2
        subset: v1       # 3
      weight: 100
    mirror:              # 4
      host: helloworld-restapi
      subset: v2
