zz-backup/10-hello-world-rest-api-canary/hw-virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /hello-world
    route:
    - destination:
        host: helloworld-restapi             # 2
        port:
          number: 80
