zz-backup/10-hello-world-rest-api-canary/istio-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-restapi-new
spec:
  hosts:
    - helloworld-restapi
  http:
    - route:
        - destination:
            host: helloworld-restapi
            subset: v1
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld-restapi-new
spec:
  host: helloworld-restapi
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
